--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ h3 {
   max-width: 600px;
   animation: fadeIn 1s;
 }
+.animation3 {
+  animation: fadeIn 3s;
+}
+.animation4 {
+  animation: fadeIn 3.5s;
+}
 .questions p {
   overflow: auto;
   max-height: 50%;
