--- a/style.css
+++ b/style.css
@@ -72,10 +72,7 @@ h3 {
   outline: solid 1px #624151;
   border-color: whitesmoke;
   position: absolute;
-  padding-bottom: 3%;
-  padding-left: 1%;
-  padding-right: 1%;
-  border-radius: 50%;
+  padding: 1%;
   width: 30px;
   height: 30px;
   top: -12px;
