--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h3 {
   border-color: whitesmoke;
   border-radius: 50%;
   position: absolute;
-  padding: 1%;
+  padding: 1% 1% 3% 1%;
   width: 30px;
   height: 30px;
   top: -12px;
