--- a/style.css
+++ b/style.css
@@ -73,13 +73,14 @@ h3 {
   border-color: whitesmoke;
   border-radius: 50%;
   position: absolute;
-  padding: 1% 1% 3% 1%;
+  padding: 1%;
   width: 30px;
   height: 30px;
   top: -12px;
   left: -12px;
   color: whitesmoke;
   text-align: center;
+  justify-content: center;
   margin: auto;
 }
 .icon {
