--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ h3 {
   border-color: whitesmoke;
   border-radius: 50%;
   position: absolute;
-  padding: 0 1% 1% 1%;
+  padding: 1%;
+  line-height: 30px;
   width: 30px;
   height: 30px;
   top: -12px;
